syntax = "proto3";

option csharp_namespace = "Weather";

package Weather;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Weather {
	rpc GetWeatherStream(google.protobuf.Empty) returns (stream WeatherResponse){}
	rpc GetWeather(google.protobuf.Empty) returns (WeatherResponse){}
}

message WeatherResponse {
	string WeatherText = 1;
	int32 WeatherIcon = 2;
	string WeartherUri = 3;
	bool IsDayTime = 4;
	float Temperature = 5;
	float RelativeHumidity = 6;
	float WindSpeed = 7;
	int32 UVIndex = 8;
	float Pressure = 9;
	float Past6HourMin = 10;
	float Past6HourMax = 11;
	google.protobuf.Timestamp RetrievedTime = 12;
	string WindDirection = 13;
	string Location = 14;
}

